flatpak: Use async API to search for already installed flatpakrefs

libflatpak will refuse to give us a ref if it's already installed, so we
want to rely on the installed db. At startup it might not be loaded yet,
so let's just call a function that will do the right thing at the right
time.

BUG: 436333